--- a/sites/all/themes/idi_zen/sass/components/_misc.scss
+++ b/sites/all/themes/idi_zen/sass/components/_misc.scss
@@ -932,3 +932,12 @@ clear: both;
      //font-weight: 200;
   }
 }
+
+
+.panel-col-sidebar-first {
+  .panel-pane  {
+    .field-items {
+      padding-left: 1em;
+    }
+  }
+}
